<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Android_Game_Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="35dp" />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:text="@string/About_the_game"
            android:textColor="@color/About_the_game" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:text="@string/Continue_the_game"
            android:textColor="@color/Continue_the_game" />

        <Button
            android:id="@+id/btnNew"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:text="@string/Games_start"
            android:textColor="@color/Games_start" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:text="@string/exit_the_game"
            android:textColor="@color/exit_the_game" />
    </LinearLayout>
</LinearLayout>